[package]
authors = [
  "The Real-Time Interrupt-driven Concurrency developers",
  "Emil Fresk <emil.fresk@gmail.com>",
]
categories = ["concurrency", "embedded", "no-std"]
description = "Core abstractions of the Real-Time Interrupt-driven Concurrency Monotonic timers"
documentation = "https://docs.rs/rtic-monotonic"
keywords = []
license = "MIT OR Apache-2.0"
name = "rtic-monotonic"
repository = "https://github.com/rtic-rs/rtic-monotonic"
version = "0.1.0-alpha.2"
edition = "2018"

[lib]
name = "rtic_monotonic"

[dependencies]
embedded-time = "0.12.0"
