[package]
authors = [
  "The Real-Time Interrupt-driven Concurrency developers",
  "Emil Fresk <emil.fresk@gmail.com>",
]
categories = ["concurrency", "embedded", "no-std"]
description = "Core abstractions of the Real-Time Interrupt-driven Concurrency Monotonic timers"
documentation = "https://docs.rs/rtic-monotonic"
keywords = []
license = "MIT OR Apache-2.0"
name = "rtic-monotonic"
repository = "https://github.com/rtic-rs/rtic-monotonic"
version = "1.0.0"
edition = "2021"

[lib]
name = "rtic_monotonic"

[dependencies]
